<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_edit_student"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="@dimen/bottom_buttons_size"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/StudentImageAdd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:src="@drawable/images" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Name" />

            <EditText
                android:id="@+id/StudentNameAdd"
                android:layout_width="match_parent"

                android:layout_height="match_parent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ID" />

            <EditText
                android:id="@+id/StudentIDAdd"
                android:layout_width="match_parent"
                android:inputType="numberDecimal|numberSigned"
                android:layout_height="match_parent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Phone" />

            <EditText
                android:id="@+id/StudentPhoneAdd"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Address" />

            <EditText
                android:id="@+id/StudentAddressAdd"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/birthday" />
            <com.example.owner.mystudentappfrag.EditDateTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/StudentAddBirthday"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time" />
            <com.example.owner.mystudentappfrag.EditTimeTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/StudentAddTime"/>
        </LinearLayout>

        <CheckBox
            android:id="@+id/StudentcheckBoxAdd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/checkbox_string" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_buttons_size"
        android:layout_gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/StudentAddAddButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/save_button" />

        <Button
            android:id="@+id/StudentDeleteButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/delete_button"
            android:visibility="gone" />

        <Button
            android:id="@+id/StudentAddCancelButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/cancel_button" />
    </LinearLayout>
</LinearLayout>